# Experiments-Multimedia

./: .gitignore  README.md  sn.c
asciiArtSpectrumVisualiser/: Makefile  build_osx.sh  test_OSX.sh
audioToMidiConverter/: Makefile  Readme.md  audioToMidiConverter.c  build_osx.sh  creat_raw.sh  creat_raw_audio.sh  generate_svf_midi.pl  run_osx.sh
filters/: .gitignore  Readme.md
filters/FFmpegPipe/: Readme.md  filter.c
filters/GStreamer/: .gitignore  Makefile  Readme.md
filters/GStreamer/CustomFilter/: gstcustomfilter.c  gstcustomfilter.h  meson.build
filters/GStreamer/CustomFilter/src/: gstcustomfilter.c  gstcustomvideofilter.c  gstcustomvideofilter.h
filters/Libav/: .gitignore  Makefile  filter.c  remuxing.c  transcoding.c
filters/nut/: .gitignore  Makefile  filter.c  text.sh
filters/nut/nut/: nut.h  nutdec.c  nutdec.h  stream_reader.c  stream_reader.h
filters/nut/utils/: logging.c  logging.h  utils_std.c  utils_std.h
filters/openCV/: .gitignore  Makefile  hello.cpp  obj_blur.cpp  obj_detect.cpp  obj_inpaint.cpp  video_obj_detect.cpp
fontsRenderer/: 2.pl  3.c  Makefile  README.md  make_osx.sh  test_fonts.c
original/: ascii art visualiser.c  rawAudioToMidi.c  sineGenOriginal.c
sineGenerator/: Makefile  build_osx.sh  raw_audio_to_array.c  run_osx.sh  test_OSX.sh
source/: flash Pitch shift.fla
untested/: flash Pitch shift.fla  muxa.php  screensaver.c  signal modulation.c  worms_shader.c
untested/Video-clips-generator/: 1.c  1.pl  README.md
untested/demoscene_fire/: 1.c  2.c  3.c
untested/ffpatched/: 1font.inc  compress.c  detect-pix.c  detector.c  ffmpeg.c  ffplay.c  ohuet.c
videoFilter/: Makefile
(+6 files in other folders)
